--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "import warnings\n",
+    "import warningss\n",
     "warnings.filterwarnings('ignore')\n",
     "from db.queries import get_user_forecast_data, row_to_config\n",
     "from db.utilities import env, logger\n",
